--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "https://alekseibaryshnikov.github.io/weather-app-test",
   "name": "weather-app-test",
   "version": "0.1.0",
   "private": true,
